--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -19,19 +19,13 @@
 
 <body class="text-center">
 
-    <form class="form-signin" method="post" action="{% url 'login' %}">
+    <form class="form-signin" method="post">
         
         <img class="mb-4" src="{% static 'images/img_pagelogin/bootstrap-solid.svg' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
         {% csrf_token %}
-        <!-- {{form}} -->
-        <label class="sr-only">Username</label>
-        <input type="text" name="username" class="form-control" placeholder="Username" required >
+        {{form}}
         
-        <label  class="sr-only">Password</label>
-        <input type="password" name="password" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-        <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" value="remember-me"> Remember me
             </label>
@@ -39,10 +33,7 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
     </form>
-    
-    <label>
-        <a href="{% url 'password_reset' %}">Reset Password</a>
-    </label>
+
     {% if messages %}
     {% for message in messages %}
     <script> alert('{{message}}')</script>
