--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,7 +22,7 @@
     <form class="form-signin" method="post" action="{% url 'accounts:login' %}">
         
         <img class="mb-4" src="{% static 'images/img_pagelogin/bootstrap-solid.svg' %}" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Please Login (from Accounts)</h1>
         {% csrf_token %}
         <!-- {{form}} -->
         <label class="sr-only">Username</label>
@@ -37,7 +37,9 @@
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
+
     </form>
+    
 
     {% if messages %}
     {% for message in messages %}
