--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -19,10 +19,10 @@
 
 <body class="text-center">
 
-    <form class="form-signin" method="post" action="{% url 'accounts:signup' %}">
+    <form class="form-signin" method="post" action="{% url 'signup' %}">
         
         <img class="mb-4" src="{% static 'images/img_pagelogin/bootstrap-solid.svg' %}" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in (from Accounts)</h1>
         {% csrf_token %}
         <!-- {{form}} -->
         <label class="sr-only">Username</label>
