--- a/templates/accounts/pass_reset_form.html
+++ b/templates/accounts/pass_reset_form.html
@@ -19,31 +19,16 @@
 
 <body class="text-center">
 
-    <form class="form-signin" method="post" action="{% url 'accounts:login' %}">
+    <form class="form-signin" method="post" action="password_reset">
         
         <img class="mb-4" src="{% static 'images/img_pagelogin/bootstrap-solid.svg' %}" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please Login (from Accounts)</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
         {% csrf_token %}
-        <!-- {{form}} -->
-        <label class="sr-only">Username</label>
-        <input type="text" name="username" class="form-control" placeholder="Username" required >
-        
-        <label  class="sr-only">Password</label>
-        <input type="password" name="password" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me">
-                 Remember me 
-            </label>
+        {{form}}
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Reset</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
-        
-        <label>
-            <a href="#">Reset Password</a>
-        </label>
     </form>
-    
 
     {% if messages %}
     {% for message in messages %}
