added reset password to with default models

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -40,7 +40,7 @@
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
         
         <label>
-            <a href="#">Reset Password</a>
+            <a href="{% url 'password_reset' %}">Reset Password</a>
         </label>
     </form>
     
