--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!doctype html>
 <html lang="en">
@@ -21,9 +20,14 @@
 
     <h3>
         <label>
-           
-                We've emailed you instructions for setting your password. You should receive the email shortly!
-            </label>
+
+            We've emailed you instructions for setting your password. You should receive the email shortly!
+        </label>
+        <hr>
+        <br>
+        <label>
+            <a href="{% url 'blog:blog-home' %}">go to Home</a>
+        </label>
     </h3>
 
     {% if messages %}
