--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Login</title>
+    <title>Rest Password</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -22,13 +22,10 @@
     <form class="form-signin" method="post">
         
         <img class="mb-4" src="{% static 'images/img_pagelogin/bootstrap-solid.svg' %}" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Enter you're Email(from registration)</h1>
         {% csrf_token %}
         {{form}}
-        
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
+
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
