--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -24,8 +24,10 @@
         <img class="mb-4" src="{% static 'images/img_pagelogin/bootstrap-solid.svg' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Enter you're Email(from registration)</h1>
         {% csrf_token %}
-        {{form}}
-
+        <!-- {{form}} -->
+        <label class="sr-only">Email</label>
+        <input type="text" name="email" class="form-control" placeholder="Email" required>
+        <br>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
