--- a/templates/accounts/signup_done.html
+++ b/templates/accounts/signup_done.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Login</title>
+    <title>Successfully</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -21,16 +21,12 @@
     <h3>
         <label>
 
-            We've emailed you instructions for setting your password. You should receive the email shortly!
-        </label>
-        <label>
-
-            ما دستورالعمل های تنظیم مجدد رمز عبور را برای شما ایمیل کرده ایم. شما به زودی ایمیل را دریافت می‌کنید!
+            حساب کاربری شما با موفقیت ساخته شده.
         </label>
         <hr>
         <br>
         <label>
-            <a href="{% url 'blog:blog-home' %}">go to Home</a>
+            <a href="{% url 'accounts:login' %}">صفحه ورود به حساب کاربری</a>
         </label>
     </h3>
 
