--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -35,7 +35,7 @@
                  Remember me 
             </label> -->
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
 
         <label>
