--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -29,7 +29,7 @@
         <input type="text" name="email" class="form-control" placeholder="Email" required>
         <br>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Reset</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
     </form>
 
