--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load compress %}
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 
@@ -12,13 +13,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--website-favicon-->
     <link href="{% static 'images/favicon.png' %}" rel="icon">
-    <!--plugin-css-->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/plugin.min.css' %}" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    {% compress css %}
+    <!--plugin-css-->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/plugin.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/all.min.css' %}" rel="stylesheet">
+
     <!-- template-style -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
@@ -66,6 +69,8 @@
             color: black;
         }
     </style>
+
+    {% endcompress %}
 </head>
 
 <body>
@@ -86,14 +91,14 @@
                     <ul class="nav-list">
 
                         {% if request.user.is_authenticated %}
-                        <a  class="menu-links"> وارد شده با {{request.user.username}} </a>
+                        <a class="menu-links"> وارد شده با {{request.user.username}} </a>
                         <li class="sbmenu rpdropdown">
                             <a href="#" class="menu-links"> حساب کاربری </a>
                         </li>
                         <li class="sbmenu rpdropdown">
                             <a href="{% url 'accounts:logout' %}" class="menu-links"> خروج از حساب </a>
                         </li>
-                            {% else %}
+                        {% else %}
                         <li class="sbmenu rpdropdown">
                             <a href="{% url 'accounts:login' %}" class="menu-links"> ورود ادمین </a>
                         </li>
@@ -440,7 +445,7 @@
     {% endif %}
 
 
-
+    {% compress js %}
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="{% static 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
     <script src="{% static 'js/jquery.min.js' %}"></script>
@@ -461,6 +466,8 @@
             }
         }
     </script>
+
+    {% endcompress %}
 </body>
 
 </html>
