--- a/templates/base.html
+++ b/templates/base.html
@@ -166,10 +166,14 @@
                                     <div class="inquiry-card-nn">
                                         <div class="title-inq-c">فروش</div>
                                         <ul>
-                                            <li><a href="tel:1111111111"><img src="{% static 'images/flags/us.svg"
-                                                        alt="us office" class="flags-size"> +1-123-456-7890</a></li>
-                                            <li><a href="tel:1111111111"><img src="{% static 'images/flags/au.svg"
-                                                        alt="australia office" class="flags-size"> +1-123-456-7890</a>
+                                            <li><a href="tel:1111111111">
+                                                <!-- <img src="{% static 'images/flags/us.svg"
+                                                        alt="us office" class="flags-size"> -->
+                                                         +1-123-456-7890</a></li>
+                                            <li><a href="tel:1111111111">
+                                                <!-- <img src="{% static 'images/flags/au.svg"
+                                                        alt="australia office" class="flags-size"> -->
+                                                         +1-123-456-7890</a>
                                             </li>
                                             <li><i class="fab fa-skype"></i><a
                                                     href="skype:niwax.company?call">niwax.company</a></li>
