Updated logo in title

--- a/templates/blog_pages/blog-home.html
+++ b/templates/blog_pages/blog-home.html
@@ -13,13 +13,13 @@
 						<div class="bread-menu">
 							<div class="bread-title text-radius text-light text-animation bg-b">
 
-								<h2> نیواکس | NIWAX</h2>
+								<h1> تایم یاد | TimeYad</h1>
 
 							</div>
 							<br>
 							<ul>
 								<!-- خانه  -->
-								<li> نیواکس، جدیدترین‌ها یک نگاه </li>
+								<li> زمان آموزش و یادیگیری  </li>
 							</ul>
 						</div>
 						<!-- text-radius text-light text-animation bg-b -->
